# sushii-bot

./: .env.example  .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  azure-pipelines.yml  deploy.sh  roles.json.example
assets/: locale.json
assets/html/: profile.html  rank.html
assets/mockups/: level_mockup.psd
html/: rank.html
migrations/2017-12-10-011200_guild_config/: down.sql  up.sql
migrations/2017-12-12-080543_create_events/: up.sql
migrations/2017-12-12-080543_create_table_events/: down.sql
migrations/2017-12-13-043914_create_table_levels/: down.sql  up.sql
migrations/2017-12-16-100315_create_guild_config/: up.sql
migrations/2017-12-18-201053_create_table_reminders/: down.sql  up.sql
migrations/2017-12-19-092845_create_table_guilds/: down.sql  up.sql
migrations/2017-12-24-013957_create_table_notifications/: down.sql  up.sql
migrations/2017-12-26-051422_create_table_users/: down.sql  up.sql
migrations/2017-12-29-235810_create_table_mod_log/: down.sql  up.sql
migrations/2018-01-12-030325_create_table_messages/: down.sql  up.sql
migrations/2018-01-19-065646_create_table_mutes/: down.sql  up.sql
migrations/2018-01-19-233240_create_table_gallery/: down.sql  up.sql
migrations/2018-02-03-205107_create_table_tags/: down.sql  up.sql
migrations/2018-02-04-235340_create_table_member_events/: down.sql  up.sql
migrations/2018-02-11-021234_users_table_add_is_patron/: down.sql  up.sql
migrations/2018-02-15-035753_create_table_cache_users/: down.sql  up.sql
migrations/2018-02-15-035801_create_table_cache_guilds/: down.sql  up.sql
migrations/2018-02-15-040156_create_table_cache_channels/: down.sql  up.sql
migrations/2018-02-18-071015_create_table_stats/: down.sql  up.sql
migrations/2018-02-22-051705_users_table_add_fishies/: down.sql  up.sql
migrations/2018-02-25-220516_create_table_cache_members/: down.sql  up.sql
migrations/2018-02-25-235319_guilds_table_add_disabled_channels/: down.sql  up.sql
migrations/2018-02-28-070552_users_table_add_patron_emoji/: down.sql  up.sql
migrations/2018-03-04-022243_levels_table_fix_primary_key/: down.sql  up.sql
migrations/2018-03-10-055900_users_table_add_profiles/: down.sql  up.sql
migrations/2018-04-28-225122_create_table_vlive_videos/: down.sql  up.sql
migrations/2018-04-28-230720_create_table_vlive_channels/: down.sql  up.sql
migrations/2018-07-26-045548_messages_add_bot/: down.sql  up.sql
migrations/2018-09-02-011631_create_table_starboards/: down.sql  up.sql
migrations/2018-09-02-020833_create_table_starboarded/: down.sql  (+1 more)
mockups/: level_mockup.psd
src/: database.rs  framework.rs  handler.rs  keys.rs  main.rs  models.rs  schema.rs  util.rs
(+85 files in other folders)
