[package]
name = "sushii"
version = "0.1.9"
authors = ["drklee3 <drklee3@users.noreply.github.com>"]

[dependencies]
serenity = "0.5.1"
dotenv = "0.10.1"
env_logger = "0.4.3"
log = "0.3"
chrono = "0.4.0"
chrono-humanize = "0.0.10"
typemap = "0.3.3"
serde = "1.0.15"
serde_json = "1.0"
serde_derive = "1.0.15"
lazy_static = "0.2.9"
reqwest = "0.8.1"
diesel = { version = "1.0.0", features = ["postgres", "chrono", "serde_json", "r2d2", "numeric"] }
diesel_migrations = "1.0.0"
rand = "0.4"
Inflector = "0.11.1"
regex = "0.2.3"
darksky = { version = "0.7", features = ["reqwest"]}
hourglass = "0.7.1"
psutil = "1.1.0"
sys-info = "0.5.6"
parking_lot = "0.5.3"
base64 = "0.9.0"
dogstatsd = "0.4.0"
bigdecimal = "0.0.10"
num-traits = "0.1.40"
